# evolution-of-todo-phase5-cloud

./: .gitignore  CLAUDE.md  CONSTITUTION.md  CONSTITUTION_PHASE4.md  DEPLOYMENT.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCKER_CLEANUP_SUMMARY.md  GEMINI.md  QUICK_DEPLOY.md  QWEN.md  README.md  RENDER_DEPLOYMENT.md  TEST_RESULTS.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICK_FIX.md  better-auth-next-app-router.skill  fastapi-jwt-auth-setup.skill  nextjs-fastapi-mcp-architecture.skill  render.yaml  test-event-flow.sh  test-microservices-simple.sh  test-microservices.sh  trigger-event-test.py
backend/: .dockerignore  .env.example  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  TEST_RESULTS.md  check_routes.py  config.py  events.py  main.py  models.py  pyproject.toml  requirements.txt  run_server.py  schemas.py  test_deployment_modes.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_advanced_features.py  002_create_recurrence_rules.py  003_create_reminders.py  004_create_audit_log.py
backend/routes/: chat.py  chatkit.py
backend/scripts/: migrate_conversations.py  start_mcp_server.sh  test_add_task.py  test_agent_integration.py  test_chat_endpoint_live.py
backend/services/: agent.py  chatkit_server.py  event_publisher.py  recurrence_service.py  reminder_service.py
backend/tests/: conftest.py  test_chat_endpoint.py  test_chatkit.py  test_mcp_tools.py
backend/tests/contract/: test_reminders_schema.py  test_task_events_schema.py  test_task_updates_schema.py
backend/tests/integration/: test_audit_logging.py  test_due_date_validation.py  test_priority_assignment.py  test_priority_sorting.py  test_recurring_task_creation.py  test_recurring_task_generation.py  test_reminder_delivery.py  test_reminder_scheduling.py  test_tag_assignment.py  test_tag_filtering.py  test_task_filtering.py  test_task_search.py  test_websocket_updates.py
backend/tests/unit/: test_recurrence_logic.py  test_search_parser.py
backend/tools/: Dockerfile  README.md  mcp_standalone.py  server.py  start_server_8001.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
infrastructure/: DEPLOYMENT_TROUBLESHOOTING.md
scripts/: create-deployment-package.sh  deploy-app.sh  (+1 more)
services/recurring-task-service/: Dockerfile  pyproject.toml  recurring_task_service.py  requirements.txt
(+231 files in other folders)
